--- a/styles/form.css
+++ b/styles/form.css
@@ -7,10 +7,8 @@ select:required:invalid {
     color: gray;
 }
 
-input:disabled, 
-    select:disabled {
-    background-color: rgb(170, 170, 170);
-    opacity: 0.9;
+input:disabled {
+    background: rgba(170, 170, 170, 0.9);
 }
 
 option[value=''][disabled] {
